--- a/contents/generalities/05-model-evaluation.html
+++ b/contents/generalities/05-model-evaluation.html
@@ -688,19 +688,22 @@ Figure 1: Schéma de l’approche par jeu de validation.
 <i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Comment choisir comment découper le jeu de données ?
+Comment choisir la taille des sous-ensembles ?
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>La réponse simple : avec de la pratique et une connaissance du domaine. S’il y a beaucoup de données, on peut faire 50-50. Sinon, on peut partir un 70-30.</p>
+<p>En général :</p>
+<ul>
+<li><p>Si l’on dispose d’un grand nombre d’observations (disons plusieurs milliers), on peut faire une division <span class="math inline">\(50-50\)</span>.</p></li>
+<li><p>Si l’on dispose de moins d’observations, on préférera garder plus d’observations pour l’entraînement. On peut, par exemple, faire une division <span class="math inline">\(70-30\)</span> ou <span class="math inline">\(80-20\)</span>.</p></li>
+</ul>
+<p>Cependant, il n’existe pas de règle universelle. Le bon choix dépend du contexte, de la complexité du modèle et de la quantité de données disponibles.</p>
 </div>
 </div>
-<p>Désavantage de la méthode :</p>
-<ol type="1">
-<li><p>L’erreur de prédiction calculée sur le jeu de données de validation peut être très variable. En effet, elle dépend du nombre d’observations dans le jeu de validation et de quelles sont ses données.</p></li>
-<li><p>On a moins de données pour apprendre le modèle. Comme les modèles ont tendance à moins bien apprendre avec moins de données, l’estimation de l’erreur sur le jeu de validation a tendance à surestimer l’erreur que l’on aurait avec un jeu de test et un modèle appris sur le jeu de données complet.</p></li>
-</ol></section><section id="validation-croisée" class="level2"><h2 class="anchored" data-anchor-id="validation-croisée">Validation croisée</h2>
-<p>Comme l’approche par jeu de données de validation, la validation croisée consiste à faire des sous-ensembles du jeu de données. L’approche consiste à découper de façon aléatoire l’ensemble des observations en <span class="math inline">\(K\)</span> groupes de taille équivalanetes. Le premier sous-ensemble est utilisé comme jeu de données de validation et le modèle est appris sur les <span class="math inline">\(K - 1\)</span> autres sous-ensembles. L’erreur de prédiction est calculé sur le premier sous-ensemble. Cette procédure est faite <span class="math inline">\(K\)</span> fois; à chaque un différent sous-ensemble est utilisé comme jeu de données de validation. À la fin, on a donc <span class="math inline">\(K\)</span> valeurs pour l’erreur de prédiction. On calcule enfin la moyenne des <span class="math inline">\(K\)</span> valeurs de prédiction.</p>
+<p>La méthode a cependant deux inconvénients. Le premier est que l’estimation de l’erreur est instable. En effet, la valeur de l’erreur de prédiction dépend des observations qui sont dans le jeu de validation. Un autre jeu de validation peut donner un résultat différent. Le deuxième est qu’il y a moins de données pour ajuster le modèle. Comme une partie des données est réservée à la validation, le modèle est appris sur un ensemble plus petit, et cela peut donc surestimer son erreur réelle par rapport à s’il avait été appris sur l’ensemble de données complet.</p>
+</section><section id="validation-croisée" class="level2"><h2 class="anchored" data-anchor-id="validation-croisée">Validation croisée</h2>
+<p>Pour contourner les limites de l’approche précédente, on utilise souvent la <strong>validation croisée</strong> (<em>cross-validation</em>). Cette méthode est plus robuste et plus stable. Le principe est de répéter l’approche par jeu de validation plusieurs sur différents sous-ensembles du jeu de données.</p>
+<p>L’approche consiste à découper aléatoirement l’ensemble des observations en <span class="math inline">\(K\)</span> sous-ensembles de taille équivalentes (appelés <em>folds</em>). Le premier <em>fold</em> est utilisé comme jeu de données de validation et le modèle est ajusté sur les <span class="math inline">\(K - 1\)</span> <em>folds</em> restant. L’erreur de prédiction est calculé sur le premier <em>fold</em>. Cette procédure est répèté <span class="math inline">\(K\)</span> fois; à chaque fois, un différent <em>fold</em> est utilisé comme jeu de données de validation. À la fin, on a donc <span class="math inline">\(K\)</span> valeurs pour l’erreur de prédiction. On calcule enfin la moyenne des <span class="math inline">\(K\)</span> valeurs de prédiction.</p>
 <div class="quarto-figure quarto-figure-center">
 <figure class="figure"><p><img src="../../include/cross-validation.png" class="img-fluid figure-img"></p>
 <figcaption>Schéma de l’approche par validation croisée</figcaption></figure>
@@ -712,11 +715,11 @@ Comment choisir comment découper le jeu de données ?
 <i class="callout-icon no-icon"></i>
 </div>
 <div class="callout-title-container flex-fill">
-Comment choisir le nombre de sous-ensemble ?
+Comment choisir le nombre de sous-ensembles <span class="math inline">\(K\)</span> ?
 </div>
 </div>
 <div class="callout-body-container callout-body">
-<p>En pratique, on utilise <span class="math inline">\(K = 5\)</span> ou <span class="math inline">\(K = 10\)</span>. Cela a un avantage computationnel car le modèle doit être appris <span class="math inline">\(K\)</span> fois.</p>
+<p>En pratique, on utilise souvent <span class="math inline">\(K = 5\)</span> ou <span class="math inline">\(K = 10\)</span>. L’avantage de limiter <span class="math inline">\(K\)</span> est de limiter le coût computationnel car le modèle doit être ajusté <span class="math inline">\(K\)</span> fois. Dans le cas limite où <span class="math inline">\(K = n\)</span>, i.e. <span class="math inline">\(K\)</span> est égal au nombre d’observations dans le jeu de données, on parle de validation croisée <em>leave-one-out</em> (LOOCV). Dans ce cas, chaque observation sert une fois de validation.</p>
 </div>
 </div>
 
